Fixed ScrollBars for Dark Theme on macOS High Sierra

--- a/src/ui/css/yakyak/applayout.less
+++ b/src/ui/css/yakyak/applayout.less
@@ -225,3 +225,18 @@
 .applayout:not(.osx) ::-webkit-scrollbar-thumb {
     background: var(--grey);
 }
+
+html.dark ::-webkit-scrollbar {
+    width: 6px;
+    background: #202020;
+}
+
+html.dark ::-webkit-scrollbar-thumb {
+    background: #333940;
+    -webkit-border-radius: 1ex;
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+
+html.dark ::-webkit-scrollbar-corner {
+    background: #000;
+}
